[package]
name = "muon_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
scylla = { version = "0.11.1", features = ["time"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
time = "0.3.31"
